Changed top photo on why_oral

--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -7,7 +7,9 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral_top.png" alt="A" width="900px">
+  <!--<div class="carousel-inner">-->
+    <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral_top.jpg" alt="A">
+  <!--</div>-->
   <h2 class="bs-docs-featurette-title">Why Oral Care?</h2>
   <div class="row ltrtpadding">
     <div class="col-md-8">
