--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -287,9 +287,11 @@ your gift so that it can support more than one aspect of the clinic, please <a
 
 <div id="transaction-error-block" class="center-block" style="display: none;">
   <div>We were unable to process your transaction for the following reason(s):
-  <ul id="error"> </ul>
-  <div>Try either: <ul><li><a href="/get_involved/donations">Restarting</a> your transaction</li><li>Donate directly
+    <ul id="error"> </ul>
+    <div>Try either: <ul><li><a href="/get_involved/donations">Restarting</a> your transaction</li><li>Donate directly
       through <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">Vanco Services</a></li>
+    </div>
+  </div>
 </div>
 
 <p class="donate text-center">If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a>.</p>
