Final changes per John

--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -43,14 +43,14 @@ tags:
               </p>
               
               <h3>Haven for Hope</h3>
-              <h5>Our mission is to offer a place of hope and new beginnings. We do this by providing, coordinating, and delivering and efficient system of care for people experiencing homelessness in Bexar County.</h5>
+              <h5>Haven for Hope's mission is to offer hope and new beginnings by providing, coordinating, and delivering an efficient system of care for people experiencing homelessness in Bexar County.</h5>
       </div>
       <div class="col-md-4">
               <p class="text-center partner">
-              <a href="http://www.ccaosa.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/Catholic_Charities.jpg"></a>
+              <a href="http://icare-sa.org" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/I_Care_SA.jpg"></a>
               </p>
-              <h3>Catholic Charities</h3>
-              <h5>The mission of Catholic Charities is to provide for the needs of our community through selfless service under the sign of love. Committed to empowering individuals and families with the goal of fostering independence, we provide over 25 bilingual and culturally sensitive programs in 19 counties throughout the Archdiocese of San Antonio without regard to gender, race, creed, religion, disability, national origin, or socioeconomic status.</h5>
+              <h3>I Care San Antonio</h3>
+              <h5>Founded in 1992 as a non-profit 501(c)(3), I Care San Antonio (ICSA) is a faith-based, medical organization managed primarily by volunteer doctors who provide dilated eye exams, refractions and glasses, and medical and surgical eye care to those who cannot afford it.</h5>
           </div>
           
       <div class="col-md-4">
