--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -12,7 +12,7 @@ tags:
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic4_480.jpg" alt="Dentist" class="bs-docs-featurette-img img-responsive">
         <h3>Why Get Involved</h3>
-        <p>Volunteers are crucial to the success of our agency. In fact, each year SACDC relies upon its nearly 300 volunteers to bring help healing and hope to almost 8,000 patients. With so much need in our community, there is a need for nearly every kind of skill!</p>
+        <p>Volunteers are crucial to the success of our agency. In fact, each year SACDC relies upon its nearly 300 volunteers to bring help, healing and hope to almost 8,000 patients. With so much need in our community, there is a need for nearly every kind of skill!</p>
       </div>
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic13_480.jpg" alt="Responsive across devices" class="bs-docs-featurette-img img-responsive">
