--- a/content/index.html
+++ b/content/index.html
@@ -28,7 +28,7 @@ tags:
         <img src="static/imgs/pic-content/frontpage2.jpg" alt="B">
           <div class="carousel-caption captionright">
             <h3 class="carousel frontpage">Dental Care for Those in Need</h3>
-            <h4 class="carousel">A new smile helped Juan continue on his path to recovery</h4>
+            <h4 class="carousel">A new smile helped Ricardo continue on his path to recovery</h4>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
@@ -84,7 +84,7 @@ tags:
           </div>
       </a>
     </div>
-    <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
+    <h4 class="text-center">We provide free dental care to San Antonio's homeless and low-income adults.</h4>
   </div>
   <div class="col-md-4">
     <div class="tinted">
@@ -103,16 +103,19 @@ tags:
 
 <div class="row">
   <div class="col-md-4 text-center">
-    <img class="frontpage img-responsive" src="/static/imgs/logos/Local_Partnerships.gif">
-    <h4 class="text-center">Eradicating poverty requires strong partnerships</h4>
+    <img class="frontpage img-responsive" src="/static/imgs/logos/teaming_up.png">
+    <h2 class="text-center">Teaming Up</h2>
+    <h4 class="text-center">Help those in need transition from poverty to independence requires strong partnerships. Meet some of ours.</h4>
   </div>
   <div class="col-md-4 text-center">
-    <img class="frontpage img-responsive" src="/static/imgs/logos/Credentials.gif">
-    <h4 class="text-center">Certifications you can trust</h4>
+    <img class="frontpage img-responsive" src="/static/imgs/logos/Compassion.png">
+    <h2 class="text-center">Dedicated to Transparency</h2>
+    <h4 class="text-center">As one of less than 5% of all nonprofit agencies to recieve a gold rating on Guide Star, SACDC is dedicated to being as transparent as possible.</h4>
   </div>
   <div class="col-md-4 text-center">
-    <img class="frontpage img-responsive" src="/static/imgs/logos/Privately_Funded.gif">
-    <h4 class="text-center">Every dollar of our funding is born and raised in Texas</h4>
+    <img class="frontpage img-responsive" src="/static/imgs/logos/Privately_Funded.png">
+    <h2 class="text-center">Private Funding</h2>
+    <h4 class="text-center">As an agency that receives no money from public sources, SACDC relies on the generosity of people just like you.</h4>
   </div>
 </div>
 </div>
