--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -76,7 +76,7 @@ tags:
       </div>
     </div>
     <div class="row">
-      <h2 class="bs-docs-featurette-title">Free dental services include:</h2></br>
+      <h2 class="bs-docs-featurette-title">Free Dental Services Include</h2></br>
     </div>
     
     <div class="row">
@@ -102,7 +102,7 @@ tags:
       </div>
       <div class="col-md-2">
           <img class="frontpage img-responsive" src="/static/imgs/logos/water_pick.png">
-          <h4 class="text-center">Dentures</h4>
+          <h4 class="text-center">Low Cost Dentures</h4>
       </div>
     </div>
 </div>
