--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -6,23 +6,21 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-    <h2 class="bs-docs-featurette-title">Schedule a Visit with Us</h2>
-    <p class="lead">Important:  You must bring a photo ID with you when you visit our clinic for services.</p>
+  <h2 class="bs-docs-featurette-title">Schedule a Visit with Us</h2>
     <div class="row page">
 	    <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic10_480.jpg" alt="Patient" class="bs-docs-featurette-img img-responsive">
-        <h4>Schedule Your Visit Today</h4>
+        <h4><b>Schedule Your Visit Today</b></h4>
         <p class="">
-          SACDC welcomes all visitors. After determining your eligibility please call or email us to schedule your visit today.
+          SACDC welcomes all visitors. After determining your <a href="/seek_care/index.html">eligibility</a> please call or email us to schedule your visit today.
           You can come by our office at the address above.</br>
         </p>
         <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
         <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SACDC</a>
 	    </div>
-    
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic16_480.jpg" alt="San Antonio Christian Dental Clinic" class="bs-docs-featurette-img img-responsive">
-        <h4>Before You Visit</h4>
+        <h4><b>Before You Visit</b></h4>
 	      <p>
           After scheduling your visit, please download our patient application and clinic rules. Make sure to bring these documents and a photo ID with you to your visit.
         </p>
@@ -34,7 +32,7 @@ tags:
         <div class="text-center map-container bs-docs-featurette-img">
           <iframe width="480" height="320" style="border:0;"  frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=1%20Haven%20for%20Hope%20Way%2C%20San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBll6tqZ6QBw4TMlWyASF0sFXvZxL9C_h8"></iframe>
         </div>
-        <h4>Location</h4>
+        <h4><b>Location</b></h4>
         <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
         <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map</a>
         <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
