--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -10,10 +10,10 @@ tags:
   <!--<div class="carousel-inner">-->
     <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral_top.jpg" alt="A">
   <!--</div>-->
-  <h2 class="bs-docs-featurette-title">Why Oral Care?</h2>
+  <h2 class="bs-docs-featurette-title"><b>Why Oral Care?</b></h2>
   <div class="row ltrtpadding">
     <div class="col-md-8">
-      <h3 class="story">Health and Employability:</h3></br>
+      <h3 class="story"><b>Health and Employability:</b></h3></br>
       <h4>The fact is that while dental disease is easily treated and prevented, poor dental health has the potential to threaten nutrition, speech, and general health.  Visible decay can erode self-confidence, personal interactions, and have a huge effect on employability.</h4>
     </div>
     <br>
@@ -28,15 +28,15 @@ tags:
     </div>
     <!--<br>-->
     <div class="col-md-6">
-      <h3 class="story">Coverage:</h3></br>
+      <h3 class="story"><b>Coverage:</b></h3></br>
       <h4>Across the country, an estimated 130 million Americans lack dental insurance.  Challenges, including the high cost of dental insurance and a lack of low-cost dental services, affect low-income families and Hispanics disproportionately.</h4>
     </div>
   </div>
   <hr class="full-rule">
   <div class="row ltrtpadding">
     <div class="col-md-6">
-      <h3 class="story">Access:</h3></br>
-      <h4>Locally, the 2013 Bexar County Community Health Assessment reported that only 47% of Bexar County residents with less than a high school degree and 44% of those with household incomes less than $25,000 reported a dental visit in the past year and only 41% of the county overall. In fact, 1/5th of Bexar County Adults say they haven’t received oral care in five years!<br>As a state, Texas has one of the lowest dentist to population ratios in the country, with a state average of 35 dentists for every 100,000 residents.  This is roughly half the national average and is exacerbated by the fact that “dental deserts” often exist in the urban core of major cities like San Antonio.</h4>
+      <h3 class="story"><b>Access:</b></h3></br>
+      <h4>Locally, only 41% of Bexar county residents have reported seeing a dentist in the past year. This need is exacerbated by the fact that the poorest counties in San Antonio fall in dental deserts where the dentist to patient ratio is 0-25% of the natonal average.</h4>
     </div>
     <br>
     <div class="col-md-6">
@@ -47,23 +47,23 @@ tags:
   <div class="row ltrtpadding">
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/tooth.png" alt="A" width="172px">
-      <h3 class="text-center">Point in Time</h3>
-      <h5 class="text-center">Dental care was cited as THE HIGHEST NEED by San Antonio's homeless in the 2014 Point in Time annual survey and statewide, only 1/7 of those who needed dental care, received it.</br></br></h5>
+      <h3 class="text-center"><b>Point in Time</b></h3>
+      <h5 class="text-center">According to the 2014 Point In Time survey, San Antonio's homeless population cited dental care as their <b>highest need</b> and statewide, only about 14% reported receiving the dental care they needed.</br></br></h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/471.png" alt="A" width="172px">
-      <h3 class="text-center">Lost Work</h3>
-      <h5 class="text-center">Each year, roughly 471 years of work are lost in San Antonio alone due to untreated dental disease.</br></br></h5>
+      <h3 class="text-center"><b>Lost Work</b></h3>
+      <h5 class="text-center">Each year, roughly 471 years of collective work are lost in San Antonio alone due to untreated dental disease. Nationally, that number rises to 82,000.</br></br></h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/peeps.png" alt="A" width="172px">
-      <h3 class="text-center">Untreated Needs</h3>
-      <h5 class="text-center">From minor signs of decay to missing teath, dental decay has huge potential for preventing, seeking and/or maintaing work.  The Kaiser Foundation reports that about 1 in 4 non-elderly adults have untreated tooth decay.</br></br></h5>
+      <h3 class="text-center"><b>Untreated Needs</b></h3>
+      <h5 class="text-center">Untreated dental decay negatively impacts employment, making it tougher for people to find and hold steady jobs.</br></br></h5>
     </div>
     <div class="col-md-3">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/states.png" alt="A" width="172px">
-      <h3 class="text-center">Chronic Costs</h3>
-      <h5 class="text-center">According to the Surgeon General, an estimated 164 million collective work hours are lost each year due to preventable dental disease.</br></br></h5>
+      <h3 class="text-center"><b>Chronic Costs</b></h3>
+      <h5 class="text-center">For every $1 spent on preventive dental measures, taxpayers are saved as much as $50 for emergency care for the uninsured and under insured.</br></br></h5>
     </div>
   </div>
 </div>
